<resources>
    <string name="app_name">Income Calculator</string>
    <string name="hours">Enter amount of hours here</string>
    <string name="wage">Enter the wage per hour</string>
    <string name="empty"></string>
    <string name="info">Total earnings</string>
    <string name="taxinfo">Taxes (18%)</string>
    <string name="calc">Calculate</string>
    <string name="author">Yaroslav Yatsyk</string>
    <string name="authorInfo">App\'s Author Name</string>
    <string name="studentIdInfo">Student\'s ID:</string>
    <string name="studentID">101343887</string>
    <string name="net">Net Income</string>
</resources>