<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/netTotal"
        android:layout_width="108dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/paymentTotal"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/hoursNum"
        android:layout_width="272dp"
        android:layout_height="72dp"
        android:ems="10"
        android:hint="@string/hours"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        android:autofillHints="" />

    <EditText
        android:id="@+id/wageAmount"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/wage"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursNum"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/paymentTotal"
        android:layout_width="104dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wageAmount"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/info"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paymentTotal"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wageAmount"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="76dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/taxinfo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/taxTotal"
        android:layout_width="108dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/paymentTotal"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="218dp"
        android:layout_height="82dp"
        android:text="@string/calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxTotal"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/netLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/net"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />
</androidx.constraintlayout.widget.ConstraintLayout>